components/jackett-synology/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/auth-url: "https://oauth2-proxy.raelix.com/oauth2/auth?allowed_groups=admin"
      nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.raelix.com/oauth2/start"
      nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
      ingress.kubernetes.io/force-ssl-redirect: "true"
      ingress.kubernetes.io/proxy-body-size: "1024m"
      nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
      
    name: jacket
    namespace: default
  spec:
    rules:
    - host: jacket.raelix.com
      http:
        paths:
        - backend:
            service:
              name: jacket
              port:
                name: https
          path: /
          pathType: ImplementationSpecific
    tls:
    - secretName: jacket.raelix.com-tls
      hosts:
      - jacket.raelix.com
